<resources>
    <string name="app_name">Re:cord</string>
    <string name="profile">프로필</string>
    <string name="calendar">캘린더</string>
    <string name="home">홈</string>
    <string name="single_line_diary">한 줄 일기</string>
    <string name="diary">일기</string>
    <string name="feed">피드</string>
    <string name="text_follow_recommendation">많은 친구들이\n팔로우했어요!🔥</string>
    <string name="todays_popular_feed">오늘의 인기 피드</string>
    <string name="add_content">Add Content</string>
    <string name="follow">팔로우하기</string>
    <string name="todays_meal">놓쳐서는 안 되는\n오늘의 급식!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="allergic"><u>알레르기 유발 성분 확인</u></string>
    <string name="explain"><u>설명해주세요</u></string>
    <string name="school">🏫</string>
    <string name="find_text"><u>아이디/비밀번호를 잃어버렸어요.</u></string>
    <string name="login">로그인 하기</string>
    <string name="email">이메일</string>
    <string name="password">비밀번호</string>
    <string name="notice">검색할 때에는 학교 이름을 정확하게 적어주세요.\n ex) 미림여자정보과학고\n업데이트가 되지 않은 학교가 있을 수 있습니다.</string>
    <string name="dd">광주고등학교 공식 페이지</string>
    <string name="_66">🔥제66회 체육대전 우승팀 인터뷰 🔥</string>
    <string name="n">오늘 출몰한\n고양이 가족 🐱</string>
    <string name="_49">❤+49</string>
    <string name="_2">👀+2</string>
    <string name="ddd">어쩔 고양이</string>
    <string name="_66_n">제66회 체육대전의 우승팀,\n불주먹팀을 모셨습니다!</string>
    <string name="_66_n_n">이번 인터뷰는 제66회 체육대전의 주인공, 불주먹팀입니다!\n 올해도 체육대전에서 엄청난 활약을 보여주었는데요.\n 불주먹팀에게 궁금한 점을 댓글로 마구마구 남겨주세요!</string>
    <string name="dddd">🎉 생일</string>
    <string name="zz">👀공식 행사</string>
    <string name="dsada">🔥수행평가</string>
    <string name="_1">1월 🎉</string>
</resources>