<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/feedFragment"
        android:title="@string/feed"
        android:icon="@drawable/ic_temp"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/diaryFragment"
        android:title="@string/diary"
        android:icon="@drawable/ic_temp"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/homeFragment"
        android:title="@string/home"
        android:icon="@drawable/ic_temp"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/calendarFragment"
        android:title="@string/calendar"
        android:icon="@drawable/ic_temp"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/profileFragment"
        android:title="@string/profile"
        android:icon="@drawable/ic_temp"
        app:showAsAction="ifRoom"/>
</menu>