<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.main.CalendarFragment">

        <TextView
            android:id="@+id/textView15"
            android:layout_width="88dp"
            android:layout_height="30dp"
            android:layout_marginStart="28dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/ca_radius"
            android:backgroundTint="#0057FA"
            android:fontFamily="@font/pretendard_medium"
            android:gravity="center"
            android:text="@string/dddd"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/textView16"
            android:layout_width="120dp"
            android:layout_height="30dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/ca_radius"
            android:backgroundTint="#00FA46"
            android:fontFamily="@font/pretendard_medium"
            android:gravity="center"
            android:text="@string/zz"
            android:textColor="@color/black"
            app:layout_constraintStart_toEndOf="@+id/textView15"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="115dp"
            android:layout_height="30dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/ca_radius"
            android:backgroundTint="#E5E5E5"
            android:fontFamily="@font/pretendard_medium"
            android:gravity="center"
            android:text="@string/dsada"
            android:textColor="@color/black"
            app:layout_constraintStart_toEndOf="@+id/textView16"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/textView17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="71dp"
            android:fontFamily="@font/pretendard_medium"
            android:text="@string/_1"
            android:textColor="@color/black"
            android:textSize="28dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView15" />

        <TextView
            android:id="@+id/textView18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="75dp"
            android:fontFamily="@font/pretendard_bold"
            android:text="16일\n선우 생일"
            android:textColor="#333333"
            android:textSize="24dp"
            app:layout_constraintStart_toStartOf="@+id/textView17"
            app:layout_constraintTop_toBottomOf="@+id/textView17" />

        <TextView
            android:id="@+id/textView19"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="31dp"
            android:fontFamily="@font/pretendard_bold"
            android:text="20일\n경민 생일"
            android:textColor="#333333"
            android:textSize="24dp"
            app:layout_constraintStart_toStartOf="@+id/textView17"
            app:layout_constraintTop_toBottomOf="@+id/textView18" />


        <TextView
            android:layout_marginTop="31dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/pretendard_bold"
            android:text="24일\n병진 생일"
            android:textColor="#333333"
            android:textSize="24dp"
            app:layout_constraintStart_toStartOf="@+id/textView17"
            app:layout_constraintTop_toBottomOf="@+id/textView19" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>