<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/logo_img"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginTop="95dp"
            android:contentDescription="logo"
            android:src="@drawable/ic_launcher_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            app:cardCornerRadius="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.45"
            tools:layout_editor_absoluteX="16dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/id_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="26dp"
                    android:fontFamily="@font/pretendard_semibold"
                    android:text="@string/email"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/password_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_marginTop="14dp"
                    android:fontFamily="@font/pretendard_semibold"
                    android:text="@string/password"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    app:layout_constraintStart_toStartOf="@id/id_text"
                    app:layout_constraintTop_toBottomOf="@+id/id_text" />

                <EditText
                    android:id="@+id/id_edit_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="8dp"
                    android:hint="1234@mail.com"
                    android:textSize="16sp"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    app:layout_constraintBottom_toBottomOf="@+id/id_text"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/password_text"
                    app:layout_constraintTop_toTopOf="@+id/id_text" />


                <EditText
                    android:id="@+id/password_edit_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:hint="12345678@"
                    android:textSize="16sp"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    app:layout_constraintBottom_toBottomOf="@+id/password_text"
                    app:layout_constraintEnd_toEndOf="@id/id_edit_text"
                    app:layout_constraintStart_toStartOf="@+id/id_edit_text"
                    app:layout_constraintTop_toTopOf="@+id/password_text" />

                <TextView
                    android:id="@+id/find_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="11dp"
                    android:gravity="right"
                    android:text="@string/find_text"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/id_edit_text"
                    app:layout_constraintTop_toBottomOf="@+id/password_edit_text" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/signup_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="5dp"
            android:background="@drawable/style_button_register"
            android:fontFamily="@font/pretendard_semibold"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:text="회원가입"
            app:layout_constraintEnd_toStartOf="@+id/button"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="@+id/cardView"
            app:layout_constraintTop_toBottomOf="@+id/cardView" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:background="@drawable/style_button_sign_in"
            android:fontFamily="@font/pretendard_semibold"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:text="@string/login"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="@+id/cardView"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toEndOf="@id/signup_btn"
            app:layout_constraintTop_toTopOf="@+id/signup_btn" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>