<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_img"
            android:layout_width="38dp"
            android:layout_height="38dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="40dp"
            android:src="@drawable/eclips_5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/pretendard_bold"
            android:includeFontPadding="false"
            android:text="@string/dd"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/profile_img"
            app:layout_constraintStart_toEndOf="@id/profile_img"
            app:layout_constraintTop_toTopOf="@+id/profile_img" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:text="2021.01.15"
            android:textColor="#C4C4C4"
            app:layout_constraintBottom_toBottomOf="@+id/textView6"
            app:layout_constraintEnd_toEndOf="parent" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:scaleType="centerCrop"
            android:src="@drawable/unsplash_inko"
            app:layout_constraintEnd_toEndOf="@+id/textView7"
            app:layout_constraintStart_toStartOf="@+id/profile_img"
            app:layout_constraintTop_toBottomOf="@+id/textView6" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:layout_marginTop="130dp"
            android:text="@string/_66"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="@+id/imageView"
            app:layout_constraintTop_toTopOf="@+id/imageView" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="11dp"
            android:background="@drawable/feed_emoji_radius"
            android:backgroundTint="#73FFFFFF"
            android:gravity="center"
            android:text="🔥+99"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="@+id/textView8"
            app:layout_constraintTop_toBottomOf="@+id/textView8" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="11dp"
            android:background="@drawable/feed_emoji_radius"
            android:backgroundTint="#0057FA"
            android:gravity="center"
            android:text="👀+58"
            android:textColor="@color/white"
            app:layout_constraintStart_toEndOf="@+id/textView9"
            app:layout_constraintTop_toBottomOf="@+id/textView8" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/pretendard_medium"
            android:text="@string/_66_n"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/imageView"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14sp"
            android:fontFamily="@font/pretendard_medium"
            android:text="@string/_66_n_n"
            android:textColor="#000000"
            app:layout_constraintStart_toStartOf="@+id/textView12"
            app:layout_constraintTop_toBottomOf="@+id/textView12" />

        <TextView
            android:id="@+id/textView71"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="15분 전"
            android:layout_marginTop="50dp"
            android:textColor="#C4C4C4"
            app:layout_constraintStart_toStartOf="@+id/textView13"
            app:layout_constraintTop_toBottomOf="@+id/textView13" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/circleImageView"
            android:layout_width="38dp"
            android:layout_height="38dp"
            android:layout_marginTop="36dp"
            android:src="@drawable/unsplash_u_kmn"
            app:layout_constraintStart_toStartOf="@+id/textView71"
            app:layout_constraintTop_toBottomOf="@+id/textView71" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/pretendard_medium"
            android:text="짜장면5초컷"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@+id/circleImageView"
            app:layout_constraintTop_toTopOf="@+id/circleImageView" />

        <TextView
            android:fontFamily="@font/pretendard_medium"
            android:textSize="14sp"
            android:layout_marginTop="6dp"
            android:textColor="#333333"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="불주먹팀 상금으로 뭐할 거에용?"
            app:layout_constraintStart_toStartOf="@+id/textView14"
            app:layout_constraintTop_toBottomOf="@+id/textView14" />


        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/circleImageViesw"
            android:layout_width="38dp"
            android:layout_height="38dp"
            android:layout_marginTop="22dp"
            android:src="@drawable/unsplash_vb"
            app:layout_constraintStart_toStartOf="@+id/textView71"
            app:layout_constraintTop_toBottomOf="@+id/circleImageView" />

        <TextView
            android:id="@+id/textView145"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/pretendard_medium"
            android:text="마라탕에고구마떡필수"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@+id/circleImageView"
            app:layout_constraintTop_toTopOf="@+id/circleImageViesw" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/pretendard_medium"
            android:text="상금으로 치킨 쏴주세요!!!!!!!"
            android:textColor="#333333"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="@+id/textView145"
            app:layout_constraintTop_toBottomOf="@+id/textView145" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="#E5E5E5
"
            android:hint="댓글을 입력해주세요"
            android:paddingStart="30dp"
            android:textColor="#CACACA"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>